ms-user-api-laravel/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-laravel
spec:
  selector:
    matchLabels:
      run: user-laravel
  template:
    metadata:
      labels:
        run: user-laravel
    spec:
      containers:
        - name: demo
          image: <username>/user-laravel
          ports:
            - containerPort: 80
