ms-user-api-laravel/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-laravel
spec:
  type: NodePort
  selector:
    run: user-laravel
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
